# cineca-gpu-school-sycl

./: README.md
examples/: CMakeLists.txt  README.md
examples/src/: CMakeLists.txt
examples/src/matmul_global/: CMakeLists.txt  matmul_global.cu
examples/src/matmul_tiled/: CMakeLists.txt  matmul_tiled.cu
examples/src/prefix_sum/: CMakeLists.txt  prefix_sum.cu
examples/src/stencil/: CMakeLists.txt  stencil.cu
exercise/: CMakeLists.txt
exercise/src/: CMakeLists.txt  heat2d_serial.cpp  heat2d_sycl.cpp  validate.cpp
exercise/src/solutions/: heat2d_sycl_buf.cpp  heat2d_sycl_usm.cpp
